# aibot

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: claude-code-review.yml
resources/: .gitignore
resources/instructions/: sample.yml
src/aibot/: __main__.py  logger.py
src/aibot/discord/: client.py
src/aibot/discord/commands/: chat.py  fixme.py  instruction.py  limit.py  provider.py
src/aibot/discord/decorators/: instruction.py  permission.py  usage.py
src/aibot/infrastructure/api/: _anthropic.py  _gemini.py  _openai.py  _params.py  factory.py
src/aibot/infrastructure/dao/: connection.py  instruction.py  usage.py
src/aibot/models/: chat.py
src/aibot/services/: instruction.py  model_resolver.py  provider.py  restriction.py  scheduler.py
