[project]
name = "aibot"
version = "0.1.0"
description = "AI-powered discord bot"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.62.0",
    "discord-py[voice]>=2.5.2",
    "google-genai>=1.29.0",
    "openai>=1.99.6",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.8",
    "types-pytz>=2025.2.0.20250809",
    "types-pyyaml>=6.0.12.20250809",
]
